Some GUI progress has been done.

--- a/app/src/main/res/menu/main_option_menu.xml
+++ b/app/src/main/res/menu/main_option_menu.xml
@@ -3,6 +3,18 @@
 
     <item
         android:id="@+id/new_game"
-        android:title="@string/new_game_menu" />
+        android:title="@string/new_game_option" />
+
+    <item
+        android:id="@+id/help"
+        android:title="@string/help_option" />
+
+    <item
+        android:id="@+id/about"
+        android:title="@string/about_option" />
+
+    <item
+        android:id="@+id/exit"
+        android:title="@string/exit_option" />
 
 </menu>
